--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-graphql": "^0.7.1",
     "express-handlebars": "^3.0.0",
     "graphql": "^14.1.1",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.4",
     "pug": "^2.0.3",
     "validator": "^10.11.0"
