--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "angular-particle": "^1.0.4",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.2",
