--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "apollo-cache-inmemory": "^1.3.2",
     "apollo-client": "^2.4.0",
     "apollo-link": "^1.2.0",
+    "apollo-link-error": "^1.1.5",
     "core-js": "^2.5.4",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
