--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "ngx-owl-carousel-o": "^1.0.11",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
